TEL-43: Created health component tests and Spock extension to start and stop the deployment before/after all Spec classes.

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,9 @@ tel-health-backend.version=1.0.0-SNAPSHOT
 gradle.version=6.3
 
 # Tech Enterprise Labs
+tel-client-core.version=1.0.0-SNAPSHOT
 tel-service-core.version=1.0.0-SNAPSHOT
+tel-component-tests.version=1.0.0-SNAPSHOT
 
 # Libraries
 cglib-nodep.version=3.3.0
