TEL-43: Created health stress tests and Spock extension to start and stop the deployment before/after all Spec classes.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'tel-health-backend'
 
 include 'tel-health-backend-service'
 include 'tel-health-component-tests'
+include 'tel-health-stress-tests'
 
